--- a/VMess-VLESS-Trojan+Websocket+gRPC/config.json
+++ b/VMess-VLESS-Trojan+Websocket+gRPC/config.json
@@ -16,13 +16,13 @@
     },
    {
      "listen": "127.0.0.1",
-     "port": "19001",
+     "port": "10001",
      "protocol": "vless",
       "settings": {
           "decryption":"none",
             "clients": [
                {
-                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #vless
              }
           ]
@@ -36,12 +36,12 @@
      },
      {
      "listen": "127.0.0.1",
-     "port": "19002",
+     "port": "10002",
      "protocol": "vmess",
       "settings": {
             "clients": [
                {
-                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562",
                  "alterId": 0
 #vmess
              }
@@ -56,13 +56,13 @@
      },
     {
       "listen": "127.0.0.1",
-      "port": "19003",
+      "port": "10003",
       "protocol": "trojan",
       "settings": {
           "decryption":"none",
            "clients": [
               {
-                 "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #trojanws
               }
           ],
@@ -77,13 +77,13 @@
      },
     {
          "listen": "127.0.0.1",
-        "port": "19004",
+        "port": "10004",
         "protocol": "shadowsocks",
         "settings": {
            "clients": [
            {
            "method": "aes-128-gcm",
-          "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+          "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #ssws
            }
           ],
@@ -98,13 +98,13 @@
      },
       {
         "listen": "127.0.0.1",
-        "port": "19005",
+        "port": "10005",
         "protocol": "vless",
         "settings": {
          "decryption":"none",
            "clients": [
              {
-               "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+               "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #vlessgrpc
              }
           ]
@@ -118,12 +118,12 @@
      },
      {
       "listen": "127.0.0.1",
-      "port": "19006",
+      "port": "10006",
      "protocol": "vmess",
       "settings": {
             "clients": [
                {
-                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562",
                  "alterId": 0
 #vmessgrpc
              }
@@ -138,13 +138,13 @@
      },
      {
         "listen": "127.0.0.1",
-        "port": "19007",
+        "port": "10007",
         "protocol": "trojan",
         "settings": {
           "decryption":"none",
              "clients": [
                {
-                 "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #trojangrpc
                }
            ]
@@ -158,13 +158,13 @@
    },
    {
     "listen": "127.0.0.1",
-    "port": "19008",
+    "port": "10008",
     "protocol": "shadowsocks",
     "settings": {
         "clients": [
           {
              "method": "aes-128-gcm",
-             "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+             "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #ssgrpc
            }
          ],
@@ -293,23 +293,22 @@
   },
   "dns": {
     "hosts": {
-      "dns.google": "8.8.8.8",
-      "dns.pub": "119.29.29.29",
-      "dns.alidns.com": "223.5.5.5",
+      "dns.tiarap": "174.138.21.128",
+      "dns.1host": "76.76.2.38",
       "geosite:category-ads-all": "127.0.0.1"
     },
     "servers": [
       {
-        "address": "https://1.1.1.1/dns-query",
+        "address": "https://doh.tiarap.org/dns-query",
         "domains": ["geosite:geolocation-!cn"],
         "expectIPs": ["geoip:!cn"]
       },
-      "8.8.8.8",
+      "174.138.21.128",
       {
-        "address": "114.114.114.114",
+        "address": "174.138.21.128",
         "port": 53,
-        "domains": ["geosite:cn", "geosite:category-games@cn"],
-        "expectIPs": ["geoip:cn"],
+        "domains": ["geosite:id", "geosite:category-games@id"],
+        "expectIPs": ["geoip:id"],
         "skipFallback": true
       },
       {
@@ -330,10 +329,10 @@
         "outboundTag": "Direct",
         "domain": [
           "geosite:private",
-          "geosite:apple-cn",
-          "geosite:google-cn",
-          "geosite:tld-cn",
-          "geosite:category-games@cn"
+          "geosite:apple-id",
+          "geosite:google-id",
+          "geosite:tld-id",
+          "geosite:category-games@id"
         ]
       },
       {
@@ -344,7 +343,7 @@
       {
         "type": "field",
         "outboundTag": "Direct",
-        "domain": ["geosite:cn"]
+        "domain": ["geosite:id"]
       },
       {
         "type": "field",
@@ -360,11 +359,10 @@
       "settings": {
         "port": 53,
         "network": "udp",
-        "address": "1.1.1.1"
+        "address": "174.138.21.128"
       },
       "tag": "dns-in",
       "listen": "127.0.0.1"
     }
   ]
 }
-END
