--- a/fodder/nginx/xray.conf
+++ b/fodder/nginx/xray.conf
@@ -1,226 +1,159 @@
 server {
-    listen 1010 proxy_protocol so_keepalive=on reuseport;
-    set_real_ip_from 127.0.0.1;
-    real_ip_header  proxy_protocol;
-    server_name xxxx;
-    client_body_buffer_size 200K;
-    client_header_buffer_size 2k;
-    client_max_body_size 10M;
-    large_client_header_buffers 3 1k;
-    client_header_timeout 86400000m;
-    keepalive_timeout 86400000m;
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-XSS-Protection "1; mode=block";
-
-    location ~ /vless {
-    if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /vless break;
-    }
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    proxy_pass http://127.0.0.1:10001;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
-    location ~ /vmess {
-    if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /vmess break;
-    }
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    proxy_pass http://127.0.0.1:10002;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-  } 
-    location ~ /trojan-ws {
-    if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /trojan-ws break;
-    }
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    proxy_pass http://127.0.0.1:10003;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
-    location ~ /ss-ws {
-    if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /ss-ws break;
-    }
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    proxy_pass http://127.0.0.1:10004;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
-    location ~ / {
-    if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /sshws break;
-    }
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    proxy_pass http://127.0.0.1:10012;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
+listen 18020 proxy_protocol so_keepalive=on reuseport;
+listen [::]:18020 proxy_protocol so_keepalive=on reuseport;
+listen 443 ssl http2 reuseport;
+listen [::]:443 http2 reuseport;
+ssl_certificate /etc/xray/xray.crt;
+ssl_certificate_key /etc/xray/xray.key;
+ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
+ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+server_name 127.0.0.1;
+autoindex on;
+access_log  /dev/null;
+error_log  /dev/null;
+location /vless {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /vless break;
 }
-server {
-    listen 1012 proxy_protocol so_keepalive=on reuseport;
-    client_body_buffer_size 200K;
-    client_header_buffer_size 2k;
-    client_max_body_size 10M;
-    large_client_header_buffers 3 1k;
-    client_header_timeout 86400000m;
-    keepalive_timeout 86400000m;
-    server_name xxxx;
-
-    location ~ / {
-    if ($http_upgrade != "Websocket") {
-    rewrite /(.*) /wsovpn break;
-    }
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    proxy_pass http://127.0.0.1:10015;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $http_x_forwarded_for;
-    proxy_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10001;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
-server {
-    listen 81 ssl http2 reuseport;
-    ssl_certificate /etc/xray/xray.crt;
-    ssl_certificate_key /etc/xray/xray.key;
-    ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-    ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-    root /var/www/html;
 location / {
-    index  index.html index.htm index.php;
-    try_files $uri $uri/ /index.php?$args;
-  }
-
-  location ~ \.php$ {
-    include /etc/nginx/fastcgi_params;
-    fastcgi_pass  127.0.0.1:9000;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-  }
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /vmess break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10002;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+location /trojan-ws {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /trojan-ws break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10003;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+location /ss-ws {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /ss-ws break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10004;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+location ^~ /vless-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP \$remote_addr;
+grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+grpc_set_header Host \$http_host;
+grpc_pass grpc://127.0.0.1:10005;
+}
+location /ss2022 {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /ss2022 break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10009;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+# Show real IP in Xray access.log
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+location ^~ /vmess-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP \$remote_addr;
+grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+grpc_set_header Host \$http_host;
+grpc_pass grpc://127.0.0.1:10006;
+}
+location ^~ /trojan-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP \$remote_addr;
+grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+grpc_set_header Host \$http_host;
+grpc_pass grpc://127.0.0.1:10007;
+}
+location ^~ /ss-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP \$remote_addr;
+grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+grpc_set_header Host \$http_host;
+grpc_pass grpc://127.0.0.1:10008;
+}
 }
 server {
-    listen 1013 http2 proxy_protocol so_keepalive=on reuseport;
-    client_body_buffer_size 200K;
-    client_header_buffer_size 2k;
-    client_max_body_size 10M;
-    large_client_header_buffers 3 1k;
-    client_header_timeout 86400000m;
-    keepalive_timeout 86400000m;
-    server_name xxxx;
-    location ~ /vless-grpc {
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    grpc_set_header Host $host;
-    grpc_pass grpc://127.0.0.1:10005;
-    grpc_set_header X-Real-IP $http_x_forwarded_for;
-    grpc_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
-    location ~ /vmess-grpc {
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    grpc_set_header Host $host;
-    grpc_pass grpc://127.0.0.1:10006;
-    grpc_set_header X-Real-IP $http_x_forwarded_for;
-    grpc_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
-    location ~ /trojan-grpc {
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    grpc_set_header Host $host;
-    grpc_pass grpc://127.0.0.1:10007;
-    grpc_set_header X-Real-IP $http_x_forwarded_for;
-    grpc_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
-    location ~ /ss-grpc {
-    add_header X-HTTP-LEVEL-HEADER 1;
-    add_header X-ANOTHER-HTTP-LEVEL-HEADER 1;
-    add_header X-SERVER-LEVEL-HEADER 1;
-    add_header X-LOCATION-LEVEL-HEADER 1;
-    proxy_headers_hash_max_size 512;
-    proxy_headers_hash_bucket_size 128;
-    proxy_http_version 1.1;
-    proxy_redirect off;
-    grpc_set_header Host $host;
-    grpc_pass grpc://127.0.0.1:10008;
-    grpc_set_header X-Real-IP $http_x_forwarded_for;
-    grpc_set_header X-Forwarded-For $http_x_forwarded_for;
-  }
+listen 10030 proxy_protocol so_keepalive=on reuseport;
+listen [::]:10030 proxy_protocol so_keepalive=on reuseport;
+server_name 127.0.0.1;
+location / {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /sshws break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10015;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+}
+server {
+listen 10040 proxy_protocol so_keepalive=on reuseport;
+listen [::]:10040 proxy_protocol so_keepalive=on reuseport;
+server_name 127.0.0.1;
+autoindex on;
+location / {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /openvpn break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10012;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+}
+server {
+listen 81;
+listen [::]:81;
+server_name 127.0.0.1 localhost;
+ssl_certificate /etc/xray/xray.crt;
+ssl_certificate_key /etc/xray/xray.key;
+ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
+ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+root /var/www/html;
 }
