--- a/fodder/FighterTunnel-examples/Documentation/config.conf
+++ b/fodder/FighterTunnel-examples/Documentation/config.conf
@@ -1,24 +1,20 @@
 server {
-listen 81; 
-listen [::]:81;
-root /var/www/html;
-}
-server {
-listen 18020 proxy_protocol;
-listen [::]:18020 proxy_protocol;
-listen 10020 ssl http2 proxy_protocol;  
-listen [::]:10020  http2 proxy_protocol;
-server_name xxx;
-autoindex on;
+listen 18020 proxy_protocol so_keepalive=on reuseport;
+listen [::]:18020 proxy_protocol so_keepalive=on reuseport;
+listen 443 ssl http2 reuseport;
+listen [::]:443 http2 reuseport;
 ssl_certificate /etc/xray/xray.crt;
 ssl_certificate_key /etc/xray/xray.key;
 ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
 ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-
-    location / {
+server_name 127.0.0.1;
+autoindex on;
+access_log  /dev/null;
+error_log  /dev/null;
+location /vless {
 if ($http_upgrade != "Upgrade") {
 rewrite /(.*) /vless break;
-      }
+}
 proxy_redirect off;
 proxy_pass http://127.0.0.1:10001;
 proxy_http_version 1.1;
@@ -27,126 +23,101 @@ proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
 }
-server {
-listen 18030 proxy_protocol;
-listen [::]:18030 proxy_protocol;
-listen 10030 ssl http2 proxy_protocol;  
-listen [::]:10030  http2 proxy_protocol;
-server_name xxx;
-autoindex on;
-ssl_certificate /etc/xray/xray.crt;
-ssl_certificate_key /etc/xray/xray.key;
-ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-
-    location / {
+location / {
 if ($http_upgrade != "Upgrade") {
 rewrite /(.*) /vmess break;
-      }
+}
 proxy_redirect off;
-proxy_pass http://127.0.0.1:10001;
+proxy_pass http://127.0.0.1:10002;
 proxy_http_version 1.1;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
 }
-server {
-listen 18040 proxy_protocol;
-listen [::]:18040 proxy_protocol;
-listen 10040 ssl http2 proxy_protocol;  
-listen [::]:10040  http2 proxy_protocol;
-server_name xxx;
-autoindex on;
-ssl_certificate /etc/xray/xray.crt;
-ssl_certificate_key /etc/xray/xray.key;
-ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-
-    location / {
+location /trojan-ws {
 if ($http_upgrade != "Upgrade") {
 rewrite /(.*) /trojan-ws break;
-      }
+}
 proxy_redirect off;
-proxy_pass http://127.0.0.1:10001;
+proxy_pass http://127.0.0.1:10003;
 proxy_http_version 1.1;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
 }
-server {
-listen 10050 ssl http2 proxy_protocol;  
-listen [::]:10050  http2 proxy_protocol;
-server_name xxx;
-autoindex on;
-ssl_certificate /etc/xray/xray.crt;
-ssl_certificate_key /etc/xray/xray.key;
-ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-
-      location ^~ /vless-grpc
-     {
-                          proxy_redirect off;
-                          grpc_set_header X-Real-IP \$remote_addr;
-                          grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                          grpc_set_header Host \$http_host;
-                          grpc_pass grpc://127.0.0.1:10005;
-     }
-
-
-      location ^~ /vmess-grpc
-     {
+location /ss-ws {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /ss-ws break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10004;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+location ^~ /vless-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP \$remote_addr;
+grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+grpc_set_header Host \$http_host;
+grpc_pass grpc://127.0.0.1:10005;
+}
+location /ss2022 {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /ss2022 break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10009;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+# Show real IP in Xray access.log
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+location ^~ /vmess-grpc
+{
 proxy_redirect off;
 grpc_set_header X-Real-IP \$remote_addr;
 grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
 grpc_set_header Host \$http_host;
 grpc_pass grpc://127.0.0.1:10006;
-     }
-
-      location ^~ /trojan-grpc
-     {
-                          proxy_redirect off;
-                          grpc_set_header X-Real-IP \$remote_addr;
-                          grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                          grpc_set_header Host \$http_host;
-                          grpc_pass grpc://127.0.0.1:10007;
-     }
-
-      location ^~ /ss-grpc
-     {
+}
+location ^~ /trojan-grpc
+{
+proxy_redirect off;
+grpc_set_header X-Real-IP \$remote_addr;
+grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+grpc_set_header Host \$http_host;
+grpc_pass grpc://127.0.0.1:10007;
+}
+location ^~ /ss-grpc
+{
 proxy_redirect off;
 grpc_set_header X-Real-IP \$remote_addr;
 grpc_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
 grpc_set_header Host \$http_host;
 grpc_pass grpc://127.0.0.1:10008;
-
-      }
- }
-
+}
+}
 server {
-listen 18050 proxy_protocol;
-listen [::]:18050 proxy_protocol;
-listen 445 ssl http2 proxy_protocol;
-listen [::]:445 http2 proxy_protocol;
-server_name xxx;
-autoindex on;
-ssl_certificate /etc/xray/xray.crt;
-ssl_certificate_key /etc/xray/xray.key;
-ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
-ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-access_log  /dev/null;
-error_log  /dev/null;
-    location / {
+listen 10030 proxy_protocol so_keepalive=on reuseport;
+listen [::]:10030 proxy_protocol so_keepalive=on reuseport;
+server_name 127.0.0.1;
+location / {
 if ($http_upgrade != "Upgrade") {
-rewrite /(.*) /fightertunnel break;
-      }
+rewrite /(.*) /sshws break;
+}
 proxy_redirect off;
 proxy_pass http://127.0.0.1:10015;
 proxy_http_version 1.1;
@@ -155,5 +126,34 @@ proxy_set_header Connection "upgrade";
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     }
+}
+}
+server {
+listen 10040 proxy_protocol so_keepalive=on reuseport;
+listen [::]:10040 proxy_protocol so_keepalive=on reuseport;
+server_name 127.0.0.1;
+autoindex on;
+location / {
+if ($http_upgrade != "Upgrade") {
+rewrite /(.*) /openvpn break;
+}
+proxy_redirect off;
+proxy_pass http://127.0.0.1:10012;
+proxy_http_version 1.1;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection "upgrade";
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+}
+server {
+listen 81;
+listen [::]:81;
+server_name 127.0.0.1 localhost;
+ssl_certificate /etc/xray/xray.crt;
+ssl_certificate_key /etc/xray/xray.key;
+ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+ECDSA+AES128:EECDH+aRSA+AES128:RSA+AES128:EECDH+ECDSA+AES256:EECDH+aRSA+AES256:RSA+AES256:EECDH+ECDSA+3DES:EECDH+aRSA+3DES:RSA+3DES:!MD5;
+ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+root /var/www/html;
 }
