--- a/fodder/FighterTunnel-examples/haproxy.cfg
+++ b/fodder/FighterTunnel-examples/haproxy.cfg
@@ -1,106 +1,72 @@
-#CONFIGURASI GEO LOADBALANCER [ xxxx ]
-global       
-    stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
-    stats timeout 1d
-
-    log /dev/log local0
-    log /dev/log local1 notice
-    log /dev/log local0 info
-    
-    tune.h2.initial-window-size 2147483647
-    tune.ssl.default-dh-param 2048
-
-    pidfile /run/haproxy.pid
-    chroot /var/lib/haproxy
-
-    user haproxy
-    group haproxy
-    daemon
-
-    ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
-    ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
-    ssl-default-bind-options no-sslv3 no-tlsv10 no-tlsv11
-
-    ca-base /etc/ssl/certs
-    crt-base /etc/ssl/private
+global
+        tune.ssl.default-dh-param 2048
+        tune.h2.initial-window-size 2147483647
 
 defaults
-    log global
-    mode tcp
-    option dontlognull
-    timeout connect 200ms
-    timeout client  300s
-    timeout server  300s
-    
-frontend multiport
-    mode tcp
-    bind-process 1 2
-    bind *:222-1000 tfo
-    tcp-request inspect-delay 200ms
-    tcp-request content accept if HTTP
-    tcp-request content accept if { req.ssl_hello_type 1 }
-    use_backend recir_http if HTTP 
-    default_backend recir_https
+        log global
+        mode    tcp
+        option  dontlognull
+        maxconn 5000
+        timeout connect 1s
+        timeout client  20s
+        timeout server  20s
+        timeout queue   30s
+        timeout http-request 1s
+        timeout http-keep-alive 1s
 
-frontend multiports
-    mode tcp
-    bind abns@haproxy-http accept-proxy tfo
-    default_backend recir_https_www
+frontend http
+        mode http
+        bind *:80
+        bind *:8080
+        bind *:2086
+        tcp-request inspect-delay 1ms
+        option forwardfor header X-Real-IP
+        http-request set-header X-Real-IP %[src]
+        tcp-request content accept if { req.payload(0,3) -m found }
+        tcp-request content accept if WAIT_END 
+        tcp-request content accept if { req.ssl_hello_type 1 }
+        tcp-request content accept if HTTP
+        use_backend openresty_http if HTTP
+        default_backend sshws
+
+
+backend sshws
+        mode http
+        server sshws 127.0.0.1:22 check
+
+backend openresty_http
+        mode http
+        server http1   127.0.0.1:18020 send-proxy check
 
 frontend ssl
-    mode tcp
-    bind-process 1
-    bind *:80 tfo
-    #bind *:55 tfo
-    bind *:8080 tfo
-    bind *:2086 tfo
-    bind *:8880 tfo
-    #bind *:8081-9999 tfo
-    bind abns@haproxy-https accept-proxy ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1 tfo
-    
-    tcp-request inspect-delay 200ms
-    tcp-request content capture req.ssl_sni len 100
-    tcp-request content accept if { req.ssl_hello_type 1 }
+        mode tcp
+        bind 0.0.0.0:80
+        bind 0.0.0.0:443
+        bind *:443 tfo ssl crt /etc/haproxy/yha.pem alpn h2,http/1.1
+        option forwardfor header X-Real-IP
+        http-request set-header X-Real-IP %[src]
+        tcp-request inspect-delay 1s
+        tcp-request content accept if { req.payload(0,11) -m found }
+        tcp-request content accept if WAIT_END 
+        tcp-request content accept if { req.ssl_hello_type 1 }
+#       acl web req.payload(0,3) -m found
+        acl web req_ssl_sni -i 127.0.0.1
+        acl is_ssh req.payload(0,7) -m bin 5353482d322e30        
+        use_backend load_balancer  if web
+        use_backend ssh if is_ssh
+        default_backend defaults_web
 
-    acl chk-02_up hdr(Connection) -i upgrade
-    acl chk-02_ws hdr(Upgrade) -i websocket
-    acl this_payload payload(0,7) -m bin 5353482d322e30
-    acl up-to ssl_fc_alpn -i h2
+backend load_balancer 
+        mode tcp
+        server localhost 127.0.0.1:443 check
 
-    use_backend GRUP_BOKEP if up-to
-    use_backend BOKEP if chk-02_up chk-02_ws 
-    use_backend BOKEP if { path_reg -i ^\/(.*) }
-    use_backend OPEN_BO if this_payload
-    default_backend CHANNEL_BOKEP
+backend defaults_web
+        mode tcp
+        balance roundrobin
+        server website1 127.0.0.1:10030 send-proxy check
+        server website2 127.0.0.1:10040 send-proxy check
+        server website3 127.0.0.1:1194 check
 
-backend recir_https_www
-    mode tcp
-    server esteh 127.0.0.1:2223 check
-     
-backend BOKEP
-    mode tcp
-    balance roundrobin
-    server sshws 127.0.0.1:1010 send-proxy check
-    server wsovpn 127.0.0.1:1012 send-proxy check
-
-backend GRUP_BOKEP
-    mode tcp
-    server geerpeceh 127.0.0.1:1013 send-proxy check
-    
-backend CHANNEL_BOKEP
-    mode tcp
-    balance roundrobin
-    server ovpn 127.0.0.1:1194 check
-    server trojan 127.0.0.1:1014 check
-
-backend OPEN_BO
-    mode tcp
-    server esteh-ngesloww 127.0.0.1:2222 check
-    
-backend recir_http
-    mode tcp
-    server loopback-for-http abns@haproxy-http send-proxy-v2 check
-    
-backend recir_https
-    mode tcp
-    server loopback-for-https abns@haproxy-https send-proxy-v2 check
+backend ssh
+        mode tcp
+        server website4 127.0.0.1:22 check
